# BrickLogo

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  SOURCES.md  about.hbs  about.toml  bricklogo.config.json.example  trains.logo
.github/workflows/: release.yml
crates/bricklogo/: Cargo.toml
crates/bricklogo-hal/: Cargo.toml
crates/bricklogo-hal/src/: adapter.rs  ble.rs  driver.rs  health.rs  lib.rs  port_manager.rs  scheduler.rs
crates/bricklogo-hal/src/adapters/: buildhat_adapter.rs  controllab_adapter.rs  coral_adapter.rs  ev3_adapter.rs  mod.rs  nxt_adapter.rs  poweredup_adapter.rs  rcx_adapter.rs  spike_adapter.rs  spike_ble_transport.rs  wedo_adapter.rs
crates/bricklogo-hal/src/tests/: adapter.rs  ble.rs  buildhat_adapter.rs  controllab_adapter.rs  coral_adapter.rs  ev3_adapter.rs  health.rs  nxt_adapter.rs  port_manager.rs  poweredup_adapter.rs  rcx_adapter.rs  scheduler.rs  spike_adapter.rs  wedo_adapter.rs
crates/bricklogo-lang/: Cargo.toml
crates/bricklogo-lang/src/: ast.rs  check.rs  error.rs  evaluator.rs  lib.rs  parser.rs  paths.rs  primitives.rs  token.rs  tokenizer.rs  unparse.rs  value.rs
crates/bricklogo-lang/src/tests/: check.rs  evaluator.rs  parser.rs  primitives.rs  tokenizer.rs  unparse.rs
crates/bricklogo-net/: Cargo.toml
crates/bricklogo-net/src/: client.rs  host.rs  lib.rs  protocol.rs
crates/bricklogo-net/src/tests/: client.rs  host.rs  protocol.rs
crates/bricklogo-tui/: Cargo.toml
crates/bricklogo-tui/src/: app.rs  bridge.rs  lib.rs  runtime.rs  ui.rs
crates/bricklogo-tui/src/tests/: app.rs  bridge.rs  ui.rs
crates/bricklogo/src/: cli.rs  firmware.rs  main.rs  repl.rs  script.rs
crates/bricklogo/src/tests/: cli.rs  firmware.rs  main.rs  repl.rs  script.rs
crates/bricklogo/tests/: script_sigint.rs
crates/rust-buildhat/: Cargo.toml
crates/rust-buildhat/src/: constants.rs  firmware.rs  lib.rs  protocol.rs
crates/rust-buildhat/src/tests/: constants.rs  firmware.rs  protocol.rs
crates/rust-controllab/: Cargo.toml
crates/rust-controllab/src/: constants.rs  controllab.rs  lib.rs  protocol.rs
crates/rust-controllab/src/tests/: controllab.rs  protocol.rs
crates/rust-coral/: Cargo.toml
crates/rust-coral/src/: ble.rs  constants.rs  coral.rs  lib.rs  protocol.rs
crates/rust-coral/src/tests/: coral.rs  protocol.rs
crates/rust-ev3/: Cargo.toml
crates/rust-ev3/src/: constants.rs  ev3.rs  lib.rs  protocol.rs  serial.rs  transport.rs  usb.rs  wifi.rs
crates/rust-ev3/src/tests/: ev3.rs  protocol.rs
crates/rust-nxt/: Cargo.toml
crates/rust-nxt/src/: constants.rs  lib.rs  nxt.rs  protocol.rs  serial.rs  transport.rs  usb.rs
crates/rust-nxt/src/tests/: nxt.rs  protocol.rs
crates/rust-poweredup/: Cargo.toml
crates/rust-poweredup/src/: ble.rs  constants.rs  devices.rs  hub.rs  lib.rs  protocol.rs
crates/rust-poweredup/src/tests/: constants.rs  devices.rs  hub.rs  protocol.rs
crates/rust-rcx/: Cargo.toml
crates/rust-rcx/src/: constants.rs  firmware.rs  lib.rs  protocol.rs  serial.rs  srec.rs  usb.rs
crates/rust-rcx/src/tests/: constants.rs  firmware.rs  protocol.rs  serial.rs  srec.rs  usb.rs
crates/rust-spike/: Cargo.toml
crates/rust-spike/src/: agent.rs  atlantis.rs  cobs.rs  constants.rs  firmware.rs  lib.rs  protocol.rs  transport.rs
crates/rust-spike/src/tests/: agent.rs  atlantis.rs  cobs.rs  constants.rs  firmware.rs  protocol.rs
crates/rust-stm32dfu/: Cargo.toml
crates/rust-stm32dfu/src/: dfu.rs  dfuse.rs  lib.rs
crates/rust-stm32dfu/src/tests/: dfu.rs  dfuse.rs
crates/rust-wedo/: Cargo.toml
crates/rust-wedo/src/: constants.rs  lib.rs  protocol.rs  wedo.rs
crates/rust-wedo/src/tests/: constants.rs  protocol.rs  wedo.rs
docs/: 01-introduction.md  02-getting-started.md  03-tutorial.md  04-advanced.md  05-reference.md  06-hardware.md
examples/: hosttest.logo  jointest.logo  turtle.logo
examples/webclient/: index.html
firmware/buildhat/: LICENSE
firmware/rcx/: README.md
firmware/spike-prime/: README.md
scripts/: install.ps1  install.sh  release.bat  release.ps1  release.sh
