[workspace]
members = [
    "crates/bricklogo",
    "crates/bricklogo-lang",
    "crates/bricklogo-hal",
    "crates/bricklogo-tui",
    "crates/rust-poweredup",
    "crates/rust-coral",
    "crates/rust-wedo",
    "crates/rust-controllab",
    "crates/rust-rcx",
    "crates/rust-buildhat",
    "crates/rust-ev3",
    "crates/bricklogo-net",
]
resolver = "2"
