[package]
name = "bricklogo-hal"
version = "0.1.0"
edition = "2024"
description = "Hardware abstraction layer for BrickLogo"

[dependencies]
bricklogo-lang = { path = "../bricklogo-lang" }
rust-wedo = { path = "../rust-wedo" }
rust-controllab = { path = "../rust-controllab" }
rust-coral = { path = "../rust-coral" }
rust-poweredup = { path = "../rust-poweredup" }
lazy_static = "1"
hidapi = "2.6"
serialport = "4"
