[package]
name = "bricklogo-hal"
version = "0.1.0"
edition = "2024"
description = "Hardware abstraction layer for BrickLogo"

[dependencies]
bricklogo-lang = { path = "../bricklogo-lang" }
rust-wedo = { path = "../rust-wedo" }
rust-controllab = { path = "../rust-controllab" }
rust-coral = { path = "../rust-coral" }
rust-poweredup = { path = "../rust-poweredup" }
rust-rcx = { path = "../rust-rcx" }
rust-buildhat = { path = "../rust-buildhat" }
rust-ev3 = { path = "../rust-ev3" }
lazy_static = "1"
hidapi = "2.6"
serialport = "4"
rusb = "0.9"
libusb1-sys = { version = "0.7", features = ["vendored"] }
btleplug = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
