[package]
name = "bricklogo"
version = "0.11.1"
edition = "2024"
description = "A modern LEGO/Logo REPL"
license = "Apache-2.0"

[dependencies]
bricklogo-lang = { path = "../bricklogo-lang" }
bricklogo-hal = { path = "../bricklogo-hal" }
bricklogo-tui = { path = "../bricklogo-tui" }
rust-poweredup = { path = "../rust-poweredup" }
rust-coral = { path = "../rust-coral" }
rust-wedo = { path = "../rust-wedo" }
rust-controllab = { path = "../rust-controllab" }
bricklogo-net = { path = "../bricklogo-net" }
rust-buildhat = { path = "../rust-buildhat" }
rust-rcx = { path = "../rust-rcx" }
rust-spike = { path = "../rust-spike" }
rust-stm32dfu = { path = "../rust-stm32dfu" }
crossterm = "0.28"
ratatui = "0.29"
ctrlc = "3"
serialport = "4"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
